--- a/app/src/main/res/layout/intro_layout.xml
+++ b/app/src/main/res/layout/intro_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.heinrichreimersoftware.materialintro.view.parallax.ParallaxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.heinrichreimersoftware.materialintro.view.parallax.ParallaxRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
@@ -11,39 +11,66 @@
     android:padding="@dimen/mi_baseline">
 
     <ImageView
-        android:id="@id/mi_image"
-        android:layout_width="match_parent"
+        android:id="@+id/sl_br1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/mi_baseline"
-        android:gravity="center"
         android:adjustViewBounds="true"
-        tools:ignore="ContentDescription"
-        tools:src="@android:drawable/sym_action_call"
-        app:layout_parallaxFactor="0.5"/>
+        android:gravity="center"
+        android:src="@drawable/sl1_brightness_1"
+        app:layout_parallaxFactor="0.3"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/sl_br3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/mi_baseline"
+        android:adjustViewBounds="true"
+        android:gravity="center"
+        android:src="@drawable/sl1_brightness_3"
+        app:layout_parallaxFactor="0.1"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/sl_br2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/mi_baseline"
+        android:adjustViewBounds="true"
+        android:gravity="center"
+        android:src="@drawable/sl1_brightness_2"
+        app:layout_parallaxFactor="0.7"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@id/mi_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/sl_br1"
         android:layout_marginTop="@dimen/mi_baseline"
-        app:layout_parallaxFactor="0.7"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:fontFamily="sans-serif-medium"
+        app:layout_parallaxFactor="0.7"
         tools:ignore="UnusedAttribute"
-        tools:text="Lorem ipsum"/>
+        tools:text="Lorem ipsum" />
 
     <TextView
         android:id="@id/mi_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/mi_title"
         android:layout_marginTop="@dimen/mi_baseline"
-        app:layout_parallaxFactor="1"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textSize="15sp"
-        android:fontFamily="sans-serif-medium"
+        app:layout_parallaxFactor="1"
         tools:ignore="UnusedAttribute"
-        tools:text="Lorem ipsum dolor sit amet, consectetur, adipisci velit, …"/>
+        tools:text="Lorem ipsum dolor sit amet, consectetur, adipisci velit, …" />
 
-</com.heinrichreimersoftware.materialintro.view.parallax.ParallaxLinearLayout>
+</com.heinrichreimersoftware.materialintro.view.parallax.ParallaxRelativeLayout>
